# PictureFrame

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  blog-esp32-7color-setup.md  deploy.sh  docker-compose.yml  drizzle.config.ts  get-logs.py  package-lock.json  package.json  svelte.config.js  vite.config.ts
docs/: esp32-pilot-cutover.md  port-to-esphome.md  websocket-redesign-plan.md
drizzle/: 0000_third_senator_kelly.sql  0001_fantastic_magdalene.sql  0002_short_vampiro.sql  0003_deep_fallen_one.sql  0004_careless_sinister_six.sql  0005_lyrical_newton_destine.sql  0006_regular_korvac.sql  0007_mighty_zarek.sql
esp32-firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.esp32s3  switch-target.sh
esp32-firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ble_provisioning.c  ble_provisioning.h  display_driver.c  display_driver.h  frame_api.c  frame_api.h  frame_fetcher.c  frame_fetcher.h  frame_ws.c  frame_ws.h  idf_component.yml  serial_provisioning.c  serial_provisioning.h  settings_store.c  settings_store.h  wifi_manager.c  wifi_manager.h
pi-output-backup-2026-05-05/: 10064232927880474.txt  10067064619971241.txt  10559134650113205.txt  10560798825997566.txt  10626643295025975.txt  10668674180777418.txt  1070467752422906.txt  10713233335347828.txt  1081715665180284.txt  10964917727098398.txt  11161178052610267.txt  11201750034011668.txt  11330087182638188.txt  11376084618767041.txt  1144840863673992.txt  11502365488935313.txt  11527548300721643.txt  11650869216196274.txt  (+118 more)
(+228 files in other folders)
